# PigRestaurant

./: .gitignore  AGENTS.md  index.html  package-lock.json  package.json  project.yml
PigRestaurant/: PigRestaurantApp.swift
PigRestaurant/Models/: AIService.swift  DiningPerson.swift  MealConfig.swift  MenuGenerator.swift  Models.swift  SeedData.swift  SolarTerm.swift  WeatherService.swift
PigRestaurant/Resources/Assets.xcassets/AppIcon.appiconset/: Contents.json
PigRestaurant/Views/: CategoryFormView.swift  ContentView.swift  DailyMenuView.swift  DiningPersonFormView.swift  DiningPersonListView.swift  DishDetailView.swift  DishFormView.swift  MealConfigView.swift  SettingsView.swift
src/: App.css  App.tsx  db.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
