[package]
name = "pig-restaurant"
version = "0.1.0"
description = "猪咪餐厅 - 家庭菜谱管理"
authors = ["xiaduan"]
edition = "2021"

[lib]
name = "pig_restaurant_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

